--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   image_picker: ^1.0.1
   styled_divider: ^1.0.5
   flutter_avif: ^1.3.0
+  flutter_svg: ^2.0.7
 
 
   # The following adds the Cupertino Icons font to your application.
