--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: 10.1.0
   from_css_color: 2.0.0
   go_router: 7.1.1
+  loading_animation_widget: ^1.2.0+4
   google_fonts: 4.0.3
   intl: 0.18.0
   flashy_tab_bar2: ^0.0.6
