--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,8 @@ dependencies:
   flutter_avif: ^1.3.0
   flutter_svg: ^2.0.7
   flutter_sticky_header: ^0.6.5
+  dio: ^5.3.2
+  stylish_dialog: ^0.0.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
