--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+
+  material_dialogs: ^1.1.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -105,6 +108,7 @@ flutter:
   assets:
     - assets/
     - assets/images/
+    - assets/lottie_animations/
 
   #   - images/a_dot_ham.jpeg
 
